# ChangeLog for dev-libs/geoip
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.10 2004/03/21 12:01:05 mboman Exp $

  21 Mar 2004; Michael Boman <mboman@gentoo.org> geoip-1.2.1.ebuild,
  geoip-1.3.0.ebuild:
  QA: IUSE variable was missing.

  16 Mar 2004; Michael Boman <mboman@gentoo.org> geoip-1.3.0.ebuild:
  Marked 1.3.0 stable on x86

  29 Feb 2004; Michael Boman <mboman@gentoo.org> metadata.xml:
  Moving the package to 'netmon' herd.

  24 Jan 2004; David Holm <dholm@gentoo.org> geoip-1.3.0.ebuild:
  Added to ~ppc.

  22 Nov 2003; Michael Boman <mboman@gentoo.org> metadata.xml:
  I'm now the primary maintainer of this package. Please report all bugs to
  mboman@gentoo.org

*geoip-1.3.0 (15 Oct 2003)

  15 Oct 2003; <solar@gentoo.org> geoip-1.2.1.ebuild, geoip-1.3.0.ebuild:
  Version bumpage.. Thanks Brian O'Kelley for making me aware of this. API
  Change for 1.3.x and above users for GeoIP Region database GeoIPRegion.region
  is no longer a pointer but an in-structure array so test the first byte of
  region == 0 rather testing if the region pointer is NULL.

*geoip-1.2.1 (01 Aug 2003)

  01 Aug 2003; <solar@gentoo.org> geoip-1.2.1.ebuild:
  The changes in this release are as follows:
  This release represents a significant advance progression from the
  0.2.0 release. It has lots more new features, making the package even
  more powerful.

  08 Jul 2003; <solar@gentoo.org> metadata.xml:
  Added metadata.xml

  29 Jun 2003; <solar@gentoo.org> geoip-1.2.0.ebuild:
  Added ~sparc to keywords after testing on sparc64

*geoip-1.2.0 (29 Jun 2003)

  29 Jun 2003; <solar@gentoo.org> geoip-1.2.0.ebuild:
  Initial Import of GeoIP to portage
