@@ -1,6 +1,8 @@
-MD5 c37fb4a97dc505cc332d521a8c6c102a ChangeLog 1760
 MD5 8154a182e60247e3bd380014a3d84590 geoip-1.2.1.ebuild 892
+MD5 0ea36e4a2f60fc153d9bdeec7992aa02 geoip-1.3.1.ebuild 746
+MD5 c37fb4a97dc505cc332d521a8c6c102a ChangeLog 1760
 MD5 0ea36e4a2f60fc153d9bdeec7992aa02 geoip-1.3.0.ebuild 746
 MD5 71459f703996a60c37485dcb2097a6c9 metadata.xml 518
 MD5 a7ff42dbfbcaea43eec4a9aabaeffe00 files/digest-geoip-1.2.1 63
 MD5 32d6bd55a58aa4c5fa4d50b3c3ab05b0 files/digest-geoip-1.3.0 63
+MD5 6b12c52bdf70d5bca54a40fa9e42945d files/digest-geoip-1.3.1 63
