@@ -1,0 +1,27 @@
+# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/Attic/geoip-1.3.1.ebuild,v 1.1 2004/04/18 04:15:22 squinky86 Exp $
+
+MY_P=${P/geoip/GeoIP}
+S=${WORKDIR}/${MY_P}
+
+DESCRIPTION="easily lookup countries by IP addresses, even when Reverse DNS entries don't exist"
+HOMEPAGE="http://www.maxmind.com/geoip/api/c.shtml"
+SRC_URI="http://www.maxmind.com/download/geoip/api/c/${MY_P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86"
+IUSE=""
+
+DEPEND="virtual/glibc
+	sys-libs/zlib"
+
+src_compile() {
+	econf --enable-shared || die "econf failed"
+	emake || die "emake failed"
+}
+
+src_install() {
+	einstall || die "einstall failed"
+}
