@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/geoip
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.10 2004/03/21 12:01:05 mboman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.11 2004/04/18 04:15:22 squinky86 Exp $
+
+*geoip-1.3.1 (17 Apr 2004)
+
+  17 Apr 2004; Jon Hood <squinky86@gentoo.org> geoip-1.3.1.ebuild,
+  version bump
 
   21 Mar 2004; Michael Boman <mboman@gentoo.org> geoip-1.2.1.ebuild,
   geoip-1.3.0.ebuild:
